--- a/master/work_dir/notebooks/Example.ipynb
+++ b/master/work_dir/notebooks/Example.ipynb
@@ -62,9 +62,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:datascience37]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-datascience37-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
