upgraded dependencies and format changes

--- a/master/work_dir/notebooks/Example.ipynb
+++ b/master/work_dir/notebooks/Example.ipynb
@@ -14,6 +14,7 @@
    "outputs": [],
    "source": [
     "import findspark\n",
+    "\n",
     "findspark.init()"
    ]
   },
@@ -49,7 +50,7 @@
     }
    ],
    "source": [
-    "print('Hello, Hola')"
+    "print(\"Hello, Hola\")"
    ]
   },
   {
